fix: add parentHrid to Page to compute parentId