@@ -124,6 +124,7 @@ public class MongoPageRepository implements PageRepository {
                 pageMongo.setAttachedMedia(null);
             }
             pageMongo.setParentId(page.getParentId());
+            pageMongo.setParentHrid(page.getParentHrid());
             if (page.getSource() != null) {
                 pageMongo.setSource(convert(page.getSource()));
             } else {
@@ -244,7 +245,7 @@ public class MongoPageRepository implements PageRepository {
                 pmm.setAttachedAt(pageMedia.getAttachedAt());
                 return pmm;
             })
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
